fix rendering form on mobile ui

--- a/src/pages/renderForm/renderForm.css
+++ b/src/pages/renderForm/renderForm.css
@@ -292,11 +292,12 @@ h1, h2 {
 @media (max-width: 768px) {
   .pagination-buttons {
 
-    margin-left: 25%;
+    margin-left: 37%;
+    width: 50%;
   
   }
   .render-form {
-    margin-left: 20%;
+    margin-left: 23%;
   }
   
   .title-desc-container {
